--- a/html/psalms.html
+++ b/html/psalms.html
@@ -7072,7 +7072,7 @@
       <p class="heb">
        כִּי סְבָבוּנִי
               כְּלָבִים עֲדַת מְרֵעִים
-              הִקִּיפוּנִי כָּאֲרִי יָדַי
+              הִקִּיפוּנִי כָּאֲרִו יָדַי
               וְרַגְלָי׃
       </p>
      </td>
