--- a/index.html
+++ b/index.html
@@ -567,6 +567,11 @@
 			<a href="HEBREW_BIB.pdf">Full Hebrew Bible .pdf file</a>
           </td>
          </tr>
+         <tr>
+          <td class="Head18" height="87" colspan="5" valign="top">
+			<a href="APP_PARA_BINGO/bingo.html">TMP LINK APP</a>
+          </td>
+         </tr>
          </tr>
          <tr>
           <td class="Head18" height="87" colspan="5" valign="top">
