--- a/APP_PARA_BINGO/bingo.html
+++ b/APP_PARA_BINGO/bingo.html
@@ -605,6 +605,10 @@
 				<div class="col-10">
 				</div>
 			</div>
+			<br>
+			<br>
+			<br>
+			<br>
 			
 			<div class="row">
 				<div class="col">
@@ -616,7 +620,15 @@
 							onclick="prt_numeros()">prt_numeros</button>
 				</div-->
 			</div>
-
+			<br>
+			<br>
+			<br>
+			<br>
+			<p>
+			BUENA SUERTE !!!
+			<br>
+			<br>
+			
           </div>
         </div>
       </div>
