--- a/APP_PARA_BINGO/bingo.html
+++ b/APP_PARA_BINGO/bingo.html
@@ -115,6 +115,8 @@
 			<div class="row">
 				<a href="#" class="col button button-fill color-red"
 						onclick="borrar_numeros()">BORRAR TODOS</a>
+				<a href="#" class="col button button-fill color-blue"
+						onclick="size_of_screen()">size_of_screen</a>
 			</div>
 			<div class="row">
 				<div class="col-10">
